	  Also there was an error in the offset calculation.
	* graphics/nxglib/fb/nxglib_moverectangle.c:  Offset argument is really a 
	  position, not an offset.
	* graphics/nxtk/nxtk_drawframe.c:  Framed windows are now drawn in three
	  colors (instead of just two).
	* drivers/input/stmpe11_*:  Added a driver to support the STMicro STMPE11
	  IO Expander and touchscreen driver.
	* configs/stm3240g-eval/nxwm:  Added to configuration for testing the NxWM
	  window manager on the STM3240G-EVAL board.
	* graphics/nxtk/nxtk_toolbarbounds.c:  Added an interface to get the toolbar
	  bounding box.
	* graphics/nxtk/nxtk_drawframe.c:  Fix an error in drawing the window frame.
	* NX, NxConsole:  Replace CONFIG_NXCONSOLE_NOGETRUN to CONFIG_LCD_GETRUN.  The
	  inability to read from the LCD is a property of the LCD, not of NxConsole.
	  Then add CONFIG_NX_WRITEONLY which is the more generic way of saying that
	  no NX component should try to read from the underlying graphic device (LCD
	  or other).
	* configs/stm3240g-eval/src/up_stmpe11.c:  Add board-specific support for the
	  the STMPE11 I/O expander on the STM3240G-EVAL board.  Verfied that the
	  STM3240G-EVAL touchscreen is now fully functional.
	* include/cxx/cfcntl:  Added std:: header file.
	* graphics/nxbe/nxbe_filltrapezoid.c and graphics/nxglib/fb/nxglib_filltrapezoid.c:
	  Fix several errors in the trapezoid fill logic.
	* include/nuttx/input/touchscreen.h, configs/hymini-stm32, configs/stm3240g-evel,
	* configs/sam3u-ek, configs/sim, arch/sim/src/up_touchscreen.c, and
	  apps/examples/touchscreen: Standardize the board-specific, touchscreen
	  initialization interfaces.
	* drivers/input/stmpe11_base.c and configs/stm3240g-eval:  The STMPE11-based
	  touchscreen seems to work better with edge (vs. level) interrupts
	* drivers/input/stmpe11_tsc.c:  Fix some status checks so that the touchscreen
	  interrupt handling logic does not read data if the fifo is not at the
	  threshold level.
